--- a/module 2/acp/acp.html
+++ b/module 2/acp/acp.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+        <title>Get familiar with properties and values</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        
+        <h1 id="munira">What is web development?</h1>
+        <p>Web development is the process of creating and maintaining websites and web applications that run online. It involves
+        everything from the visual design of a site (front-end) to the behind-the-scenes coding and database management that
+        make it functional (back-end). Key tasks include coding with languages like HTML, CSS, and JavaScript, managing data,
+        ensuring security, optimizing for speed, and creating an engaging user experience.</p>
+    </body>
 </html>
