--- a/module 3/acp/activity.html
+++ b/module 3/acp/activity.html
@@ -7,6 +7,27 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        <style type="text/css">
+            h1 {
+                color: aquamarine;
+            }
+            #a1, #a4 {
+            color: beige;
+            background-color: blue;
+            font-size: 20px;
+            }
+            #a2, #a5 {
+                color: azure;
+                background-color: brown;
+                font-size: 20px;
+            }
+            #a3, #a6 {
+             color: blanchedalmond;
+             background-color: black;
+             font-size: 20px;
+            }
+            
+        </style>
 </head>
 
 <body>
@@ -15,7 +36,12 @@
     <div class="row">
 <div id="a1" class="col-sm-3">Adding 1-3 grids</div>
 <div id="a2" class="col-sm-4">Adding 4-7 grids</div>
-<div>Adiing 8-12 grids</div>
+<div id="a3 col-sm-5">Adiing 8-12 grids</div>
+    </div>
+    <div class="row">
+      <div id="a4 col-sm-2">adding 1-2 grids</div>
+      <div id="a5 col-sm-6">adding 3-8 grids</div>
+      <div id="a6 col-sm-4">adding 9-12 grids</div>
     </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
