--- a/module 3/acp2/activity.html
+++ b/module 3/acp2/activity.html
@@ -10,7 +10,28 @@
 </head>
 
 <body>
-    <h1 class="text-center">Myself!</h1><br><br> <h1 class="text-center">My hobbies-</h1>
+    <h1 class="text-center">Myself!</h1><br><br> 
+    <p class="container">My name is<mark>Munira Nigar</mark> text.</p>
+   </p>
+    <p class="container"><u>I am a student of class 7 at P.H. Ameen Academy, located in Chattogram, Bangladesh.</u></p>
+    <p class="container"><small>I am proud to hold the second position in my class through consistent effort and dedication to my studies.</small></p>
+    <p class="container"><strong>Apart from academics, I have a keen interest in coding, art, and gaming, which help me to express my creativity and
+    develop new skills.</strong></p>
+    <p class="container"><em>I consider myself a dedicated and hardworking individual who strives to achieve excellence in every task I undertake.
+    <p class="lead container">
+        I come from a loving family of five members,
+    </p>
+ who always support and encourage me in all my positive endeavors. Their
+    motivation inspires me to keep improving and reaching my goals.</em></p>
+    <figure class="text-center">
+        <blockquote class="blockquote">
+            <p>"Believe in yourself, work hard, and never give up, your dedication will lead you to greatness.".</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+             <cite title="Source Title">Anonymous</cite>
+        </figcaption>
+    </figure>
+    <h1 class="text-center">My hobbies-</h1>
     <div class="container-sm border text-center">Drawing new canvases!</div>
     <div class="container-md border text-center">styling</div>
     <div class="container-lg border text-center">Coding</div>
