--- a/module 3/acp2/activity.html
+++ b/module 3/acp2/activity.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1 class="text-center">Myself!</h1><br><br> 
-    <p class="container">My name is<mark>Munira Nigar</mark> text.</p>
+    <p class="container">My name is<mark>Munira Nigar</mark>.</p>
    </p>
     <p class="container"><u>I am a student of class 7 at P.H. Ameen Academy, located in Chattogram, Bangladesh.</u></p>
     <p class="container"><small>I am proud to hold the second position in my class through consistent effort and dedication to my studies.</small></p>
