--- a/module 4/acp/activity.html
+++ b/module 4/acp/activity.html
@@ -2,9 +2,17 @@
 <html>
     <head></head>
     <body>
-        <h1></h1>
+        <h1>Javascript strings and loops</h1>
+        <p>Numbers from 1 to 9</p>
+        <p id="result"></p>
     </body>
     <script>
-        
+        var number = "";
+        for (i = 1; i < 11; i++) {
+            number += i + <"br">;
+        }
+        document.write("the random number is +math.floor(math.random() * 100 )");
+        var date = new date();
+        document.write("Today's date is" +date.getDate());
     </script>
 </html>
