--- a/module 4/acp2/activity.html
+++ b/module 4/acp2/activity.html
@@ -2,7 +2,19 @@
 <html>
     <head></head>
     <body>
-        <h1>Arguement Sums</h1>
-        
+        <h1>Arrays</h1>
+        <p id="cars"></p>
+        <p id="join"></p>
+        <p id="pop"></p>
+        <script>
+            var cars = ["Tesla", "Toyota", "Rolls Royce", "Mercedes"]
+            document.write(cars[1])
+            cars.push("Date");
+            document.getElementById("join").
+            innerHTML = cars.join("  _  ")
+            cars.pop();
+            document.getElementById("pop").
+           innerHTML = cars
+        </script>
     </body>
 </html>
