--- a/module 6/lesson 6/activity.html
+++ b/module 6/lesson 6/activity.html
@@ -25,7 +25,7 @@
             var stopped = true;
             var t;
             function change() {
-                var random = Math.floor(math.random() * 6);
+                var random = Math.floor(Math.random() * 6);
                 dice.innerHTML = dices[random];
             }
             function stopstart() {
