--- a/website/activity.html
+++ b/website/activity.html
@@ -42,8 +42,36 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <div class="container d-flex mx-auto justify-content-center 
+        gap-4">
+            <div class="card" style="width: 18rem;">
+                <img src="WhatsApp Image 2026-02-04 at 20.19.19.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Canvas drawn by me</h5>
+                    <p class="card-text">I drew this last year. and recently this canvas was exhibited in "Jela Shilpokola Academy" and i got awarded for that</p>
+                    <a href="#" class="btn btn-primary">More!</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="WhatsApp Image 2026-02-04 at 20.19.20 (1).jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Seashore Scenery by me</h5>
+                    <p class="card-text">According to me it might be my best painting. I worked on this for almost 3 months.And the funfact is i used natural sand and stones on this.</p>
+                    <a href="#" class="btn btn-primary">More!</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="WhatsApp Image 2026-02-04 at 20.19.20.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">My first canvas!</h5>
+                    <p class="card-text">I drew this on 5th grade.It was my first acrylic and canvas painting and gladly all of my artworks got exhibited in the last january 26-27th at Jela Shilpokola Academy.</p>
+                    <a href="#" class="btn btn-primary">More!</a>
+                </div>
+            </div>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
             crossorigin="anonymous"></script>
+            
     </body>
 </html>
