--- a/website/activity.html
+++ b/website/activity.html
@@ -2,7 +2,8 @@
 <html>
     <head><link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous"></head>
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    </head>
     <body>
 
         <div class="topnav">
@@ -44,7 +45,7 @@
         </div>
         <div class="container d-flex mx-auto justify-content-center 
         gap-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-5" style="width: 18rem;">
                 <img src="WhatsApp Image 2026-02-04 at 20.19.19.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Canvas drawn by me</h5>
@@ -52,7 +53,7 @@
                     <a href="#" class="btn btn-primary">More!</a>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-5" style="width: 18rem;">
                 <img src="WhatsApp Image 2026-02-04 at 20.19.20 (1).jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Seashore Scenery by me</h5>
@@ -60,7 +61,7 @@
                     <a href="#" class="btn btn-primary">More!</a>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-5" style="width: 18rem;">
                 <img src="WhatsApp Image 2026-02-04 at 20.19.20.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">My first canvas!</h5>
@@ -68,6 +69,9 @@
                     <a href="#" class="btn btn-primary">More!</a>
                 </div>
             </div>
+        </div>
+        <div class="footer">
+            <p>@copy all rights and reserved by Munira Ngar.</p>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
