--- a/website/Murgir Dokan/activity.html
+++ b/website/Murgir Dokan/activity.html
@@ -49,7 +49,7 @@
     <div class="container d-flex mx-auto justify-content-center 
         gap-4">
         <div class="card" style="width: 18rem;">
-            <img src="WhatsApp Image 2026-02-04 at 20.19.19.jpeg" class="card-img-top" alt="...">
+            <img src="boiler.jfif" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Farm er murgi </h5>
                 <p class="card-text">Cheapest murgi</p>
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="WhatsApp Image 2026-02-04 at 20.19.20 (1).jpeg" class="card-img-top" alt="...">
+            <img src="deshi.jfif" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Deshi murgi</h5>
                 <p class="card-text">Most expensive rare murgi</p>
@@ -65,13 +65,16 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="WhatsApp Image 2026-02-04 at 20.19.20.jpeg" class="card-img-top" alt="...">
+            <img src="sonali.jfif" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Shonali murgi</h5>
                 <p class="card-text">Mid one. be careful because some sellers scam shonali murgi saying it is deshi murgi. you will never get scammed in our page.</p>
                 <a href="#" class="btn btn-primary">More!</a>
             </div>
         </div>
+    </div>
+    <div class="footer">
+        <p>@copy all rights and reserved by Munira Ngar.</p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
