--- a/website/activity.html
+++ b/website/activity.html
@@ -43,8 +43,18 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <div class="container justify-content-center d-flex">
+            <h2>About us</h2>
+            <div class="mm">
+                <p>This website was overall about me. I wanted to show some of my talents and works on this. As well as some of my hobbies. A hobby makes a person's leisure time more meaningful and happy.It is an activity done for enjoyment during free time. Having a hobby is important because it helps relieve stress,
+                provides joy, improves creativity, and builds confidence.So that was all. you can see some of my artworks below.</p>
+            </div>
+            <div>
+                <img width="250" src="me.jpg" alt="">
+            </div>
+        </div>
         <div class="container d-flex mx-auto justify-content-center 
-        gap-4">
+        gap-4 mt-4">
             <div class="card mb-5" style="width: 18rem;">
                 <img src="WhatsApp Image 2026-02-04 at 20.19.19.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
