--- a/website/Murgir Dokan/activity.html
+++ b/website/Murgir Dokan/activity.html
@@ -46,6 +46,28 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
+    <div class="container justify-content-center d-flex">
+        <h2>About us</h2>
+        <div class="mm">
+            <p>Chicken shops, particularly common as fast-food, takeaway, or casual dining spots, are popular, often brightly colored,
+            urban establishments serving fried or rotisserie chicken, burgers, and chips. They act as accessible community hubs for
+            quick, affordable meals. While criticized for contributing to poor diet, they remain staples in many neighborhoods,
+            offering comfort food.
+            Key features and context include:
+            Menu & Vibe: Offerings often include fried chicken, spit-roasted chicken, chips, coleslaw, and drinks, sometimes with
+            casual seating.
+            Industry Trends: While facing competition from other eateries, they remain popular, with some growth in delivery
+            platform usage.
+            Cultural Significance: In the UK, they are considered significant, especially in diverse neighborhoods, serving as
+            popular social spots.
+            Economic Impact: They provide affordable food but are sometimes linked to concerns regarding urban blight and public
+            health.
+            Marketing: Common, often featuring red, white, and blue branding</p>
+        </div>
+        <div>
+            <img width="200" src="murgi.jpg" alt="">
+        </div>
+    </div>
     <div class="container d-flex mx-auto justify-content-center 
         gap-4">
         <div class="card" style="width: 18rem;">
