--- a/website/activity.html
+++ b/website/activity.html
@@ -80,6 +80,28 @@
                 </div>
             </div>
         </div>
+        <div class="section container">
+            <div class="text-center">
+                <h2>Contact Us</h2>
+            </div>
+            <div class="form">
+                <form action="/action_page.php">
+                    <label for="name">First name</label>
+                    <input type="text" id="name" name="firstname" placeholder="Your name.."> <br> <br>
+                    <label for="lname">last name</label>
+                    <input type="text" id="lname" name="lastname" placeholder="Your last name.."> <br> <br>
+                    <label for="country">Country</label>
+                    <select name="country" id="country">
+                        <option value="Bangladesh">Bangladesh</option>
+                        <option value="Japan">Japan</option>
+                        <option value="Usa">Usa</option>
+                    </select> <br> <br>
+                    <label for="subject">Subject</label> <br>
+                    <textarea name="subject" id="subject" placeholder="Write something.." style="height:170px"></textarea> <br>
+                    <input type="submit" class="text-center" value="submit"> <br>
+                </form>
+            </div>
+        </div>
         <div class="footer">
             <p>@copy all rights and reserved by Munira Ngar.</p>
         </div>
